--- a/config/helm/bases/ciliumnetworkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
+++ b/config/helm/bases/ciliumnetworkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
@@ -1,20 +1,21 @@
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
+  name: capi-kubeadm-control-plane-controller-manager
+  namespace: capi-kubeadm-control-plane-system
   labels:
     app.kubernetes.io/component: control-plane-kubeadm
     cluster.x-k8s.io/provider: control-plane-kubeadm
     control-plane: controller-manager
-  name: capi-kubeadm-control-plane-controller-manager
 spec:
   endpointSelector:
     matchLabels:
       cluster.x-k8s.io/provider: control-plane-kubeadm
       control-plane: controller-manager
-  ingress:  # for webhooks
-    - fromEntities:
-      - cluster  # even though it's a kube-apiserver pod running in host network it doesn't work without "cluster"
-      - kube-apiserver
+  ingress:
+  - fromEntities:
+    - cluster
+    - kube-apiserver
   egress:
-    - toEntities:
-        - kube-apiserver
+  - toEntities:
+    - kube-apiserver
