--- a/config/helm/bases/networkpolicies/capi-controller-manager.yaml
+++ b/config/helm/bases/networkpolicies/capi-controller-manager.yaml
@@ -1,25 +1,25 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
+  name: capi-controller-manager
+  namespace: capi-system
   labels:
     app.kubernetes.io/component: cluster-api
     cluster.x-k8s.io/provider: cluster-api
     control-plane: controller-manager
-  name: capi-controller-manager
 spec:
   podSelector:
     matchLabels:
       cluster.x-k8s.io/provider: cluster-api
       control-plane: controller-manager
-  egress:
-    - ports:
-        # Access to workload clusters' Kubernetes API
-        - port: 443
-          protocol: TCP
-        - port: 6443
-          protocol: TCP
-      to:
-        - ipBlock:
-            cidr: 0.0.0.0/0
   policyTypes:
-    - Egress
+  - Egress
+  egress:
+  - to:
+    - ipBlock:
+        cidr: 0.0.0.0/0
+    ports:
+    - protocol: TCP
+      port: 443
+    - protocol: TCP
+      port: 6443
