--- a/config/helm/bases/networkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
+++ b/config/helm/bases/networkpolicies/capi-kubeadm-control-plane-controller-manager.yaml
@@ -1,24 +1,25 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
+  name: capi-kubeadm-control-plane-controller-manager
+  namespace: capi-kubeadm-control-plane-system
   labels:
     app.kubernetes.io/component: control-plane-kubeadm
     cluster.x-k8s.io/provider: control-plane-kubeadm
     control-plane: controller-manager
-  name: capi-kubeadm-control-plane-controller-manager
 spec:
   podSelector:
     matchLabels:
       cluster.x-k8s.io/provider: control-plane-kubeadm
       control-plane: controller-manager
-  egress:
-    - ports:
-        - port: 443
-          protocol: TCP
-        - port: 6443
-          protocol: TCP
-      to:
-        - ipBlock:
-            cidr: 0.0.0.0/0
   policyTypes:
-    - Egress
+  - Egress
+  egress:
+  - to:
+    - ipBlock:
+        cidr: 0.0.0.0/0
+    ports:
+    - protocol: TCP
+      port: 443
+    - protocol: TCP
+      port: 6443
