--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -29,19 +29,19 @@ labels:
     helm.sh/chart: cluster-api
   includeTemplates: true
 
-# we want to define our own images
 images:
-  - name: registry.k8s.io/cluster-api/cluster-api-controller
-    newName: "{{.Values.images.domain}}/{{.Values.images.core.name}}"
-    newTag: "{{.Values.images.core.tag | default .Values.images.tag}}"
-
-  - name: registry.k8s.io/cluster-api/kubeadm-bootstrap-controller
-    newName: "{{.Values.images.domain}}/{{.Values.images.bootstrap.name}}"
-    newTag: "{{.Values.images.bootstrap.tag | default .Values.images.tag}}"
-
-  - name: registry.k8s.io/cluster-api/kubeadm-control-plane-controller
-    newName: "{{.Values.images.domain}}/{{.Values.images.controlplane.name}}"
-    newTag: "{{.Values.images.controlplane.tag | default .Values.images.tag}}"
+# Cluster API
+- name: registry.k8s.io/cluster-api/cluster-api-controller
+  newName: "{{ .Values.images.domain }}/{{ .Values.images.core.name }}"
+  newTag: "{{ .Values.images.core.tag | default .Values.images.tag }}"
+# kubeadm bootstrap
+- name: registry.k8s.io/cluster-api/kubeadm-bootstrap-controller
+  newName: "{{ .Values.images.domain }}/{{ .Values.images.bootstrap.name }}"
+  newTag: "{{ .Values.images.bootstrap.tag | default .Values.images.tag }}"
+# kubeadm control plane
+- name: registry.k8s.io/cluster-api/kubeadm-control-plane-controller
+  newName: "{{ .Values.images.domain }}/{{ .Values.images.controlplane.name }}"
+  newTag: "{{ .Values.images.controlplane.tag | default .Values.images.tag }}"
 
 transformers:
   # Mutating webhooks
