--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -4,7 +4,8 @@ kind: Kustomization
 namespace: "{{ .Release.Namespace }}"
 
 resources:
-  - input/cluster-api-components.yaml
+  # Cluster API components
+  - bases/cluster-api-components.yaml
   - watchfilter-patch-configmap.yaml
   - ciliumnetworkpolicy_capi-controller-manager.yaml
   - ciliumnetworkpolicy_capi-kubeadm-bootstrap-controller-manager.yaml
